<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Airport Status</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_status_list">Airport Status</string>
    <string name="airportCodeHint">Enter an airport code or city&#8230;</string>
    <string name="txtHeaderDelays">Delays</string>
    <string name="txtHeaderSecurity">Security</string>
    <string name="txtWeather"></string>
    <string name="txtAirportCode"></string>
    <string name="txtHeaderWeather">Weather</string>
    <string name="txtTransitAnnotation">Travel times are retrieved from Google Maps</string>
    <string name="txtSecurityDetailsButton">Screening Wait Times</string>
    <string name="txtHeaderTransit">Travel Time</string>
    <string name="txtHeaderTransit1">Driving</string>
    <string name="txtHeaderTransit2">Transit</string>
    <string name="txtTransitTime1"></string>
    <string name="txtTransitTime2"></string>
    <string name="title_activity_security_wait_time">SecurityWaitTimeActivity</string>
    <string name="txtTravelTimeError">No route available</string>
    <string name="txtRoutingError">No route available</string>
    <string name="go">Get Airport Status</string>
    <string name="title_activity_query">Loading</string>
    <string name="txtWaiting">Loading&#8230;</string>
    <string name="txtTransitMapButton">Button to navigate to Google Maps transit directions</string>
    <string name="txtDrivingMapButton">Button to navigate to Google Maps driving directions</string>
    <string name="txtFavoritesPlaceholder">Favorites</string>
    <string name="txtDelaysError">Unknown</string>
    <string name="txtDelays0">No Delays</string>
    <string name="txtDelays1">Few Delays</string>
    <string name="txtDelays2">Moderate Delays</string>
    <string name="txtDelays3">High Risk of Delays</string>
    <string name="txtDelays4">All Flights Delayed</string>
    <string name="action_search">Search</string>
    <string name="title_activity_landing">Airport Status</string>
    <string name="txtErrorSavedEmpty">No airports are in your favorites yet.</string>
    <string name="txtLoadingAirports">Finding Nearby Airports</string>
    <string name="txtRefresh">Refresh</string>
    <string name="txtRefreshing">Refreshing&#8230;</string>

</resources>
