<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvAirportName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvBigAirportCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="90sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weather Conditions:" />

            <TextView
                android:id="@+id/tvWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtWeather"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvDelays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onFavoriteAction"
            android:src="@drawable/ic_star_empty" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutTransitTimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" >

        <TextView
            android:id="@+id/tvHeaderTransit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHeaderTransit"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/layoutTransit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tvHeaderTransit"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/tvHeaderTransit1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:text="@string/txtHeaderTransit1" />

            <TextView
                android:id="@+id/tvTransitValue1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:text="@string/txtTravelTimeError" />

            <ImageView
                android:id="@+id/imgDrivingMapButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:contentDescription="@string/txtDrivingMapButton"
                android:onClick="onClickDrivingMapButton"
                android:padding="2dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTransit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/layoutTransit1" >

            <TextView
                android:id="@+id/tvHeaderTransit2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:text="@string/txtHeaderTransit2" />

            <TextView
                android:id="@+id/tvTransitValue2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:text="@string/txtTravelTimeError" />

            <ImageView
                android:id="@+id/imgTransitMapButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:contentDescription="@string/txtTransitMapButton"
                android:onClick="onClickTransitMapButton"
                android:padding="2dp"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
